--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Educator JS Codespace Template",
   "source": "src/index.html",
-  "homepage": "https://bakrilawzi.github.io/task3",
+  "homepage": "https://github.com/bakrilawzi/task3",
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
